<resources>
    <string name="app_name">Scannera</string>
    <string name="app_email_address" translatable="false">scannera.customerservice@gmail.com</string>
    <string name="app_email_address_password" translatable="false">fit3162scannera</string>
    <string name="app_authority" translatable="false">com.fit3162.scannera_app</string>
    <string name="scannera_privacy_policy_url" translatable="false">https://sites.google.com/view/scannera-app-privacy-policy/%E9%A6%96%E9%A1%B5</string>
    <string name="scannera_terms_and_conditions_url" translatable="false">https://sites.google.com/view/scannera-app-terms-conditions/%E9%A6%96%E9%A1%B5</string>
    <string name="welcome_to_scannera">Hi %1$s, welcome to Scannera!</string>
    <string name="username_or_email_login">Username or Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="or_login_with">Or login with</string>
    <string name="signup">Sign Up</string>
    <string name="already_have_an_acc_hint">Already have an account?</string>
    <string name="login_here"><u>login here</u></string>
    <string name="forgotten_password"><u>Forgotten password?</u></string>
    <string name="dont_have_an_acc_tv">Don\'t have an account?</string>
    <string name="create_account">Create Account</string>
    <string name="username_sign_up">Username</string>
    <string name="firstname_sign_up">First Name</string>
    <string name="lastname_sign_up">Last Name</string>
    <string name="email_sign_up">Email Address</string>
    <string name="confirm_password_sign_up">Confirm Password</string>
    <string name="send_email">Send Email</string>
    <string name="forgot_your_password_title">Forgot your password?</string>
    <string name="forgotten_password_instruction">Please enter the email associated with your account, and we will send you an email with the password reset instruction.</string>
    <string name="password_reset_email_subject">Scannera Password Reset Instruction</string>
    <string name="password_reset_email_content">Dear user,
        \n\nA request has been received to reset your password for your Scannera account.\n\nPlease find your temporary password below, and follow the below instruction:\n\n
        1. Log in to the Scannera app with the temporary password below.\n
        2. Click \"Account\" at the bottom.\n
        3. Click \"Account Information\".\n
        4. Click \"Edit\" that aligns with \"Password\" to enter your own new password.\n\nPlease reset your password as soon as possible, thank you.
        \n\nYour temporary password: %1$s\n\nIf you did not initiate this request, please contact us immediately at this email.\n\n\nThanks,\nThe Scannera Team
    </string>
    <string name="email_sent">Email has been sent!</string>
    <string name="password_reset_email_sent_description">Please check your inbox and follow the instruction to reset your password.</string>
    <string name="didnt_receive_email">Didn\'t receive the email?</string>
    <string name="check_spam_msg">Please check your spam, or:</string>
    <string name="resend"><u>Resend</u></string>
    <string name="home">Home</string>
    <string name="account">Account</string>
    <string name="logout">Log Out</string>
    <string name="contribution_score">Contribution:&#160;%1$d</string>
    <string name="account_information">Account Information</string>
    <string name="starred_products">Starred Products</string>
    <string name="no_starred_products">No product has been starred yet…</string>
    <string name="scan_history">Scan History</string>
    <string name="no_scanned_products">No product has been scanned yet…</string>
    <string name="ask_bot">Ask Scannera Bot</string>
    <string name="about_us">About Us</string>
    <string name="scan_a_barcode">Scan a barcode</string>
    <string name="home_greeting">Hi,&#160;%1$s</string>
    <string name="home_recommendation_title">Products you may like:</string>
    <string name="home_no_recommendation_title">Sorry, no recommendation is available at the moment, please star or scan product(s) to enable this feature.</string>
    <string name="dialog_permission_required_title">%1$s Access Not Enabled</string>
    <string name="dialog_permission_required_msg">%1$s permission is required to proceed this activity, enable access via "Settings" -> "App info" -> "Scannera".</string>
    <string name="dialog_btn_reject">Reject</string>
    <string name="dialog_btn_enable">Enable</string>
    <string name="search">Search</string>
    <string name="barcode_scanner_title">Scan Barcode</string>
    <string name="about_us_description">
        This App is built by 3 Computer Science students from Monash University as an university project.
        It is aimed to help Australian customers avoid their needs of reading the packages,
        and support their decisions on buying food products by providing nutritional comparisons.
        Hope you are enjoying the App!
    </string>
    <string name="provide_feedback">Provide Feedback</string>
    <string name="rating_feedback_prompt">If you are interested in, please rate us and let us know how we are doing! We are always trying to improve and your feedback is invaluable!</string>
    <string name="feedback">Feedback</string>
    <string name="submit">Submit</string>
    <string name="on_rating_empty_msg">Please give us a rate. :)</string>
    <string name="on_feedback_empty_msg">Please let us know what you thought by writing some feedback. :)</string>
    <string name="feedback_success">Successfully submitted! Thank you very much for your feedback! You have been awarded %1$d contribution points!</string>
    <string name="chat_bot_activity_title">Chatting With Scannera Bot</string>
    <string name="enter_message_hint">Please enter your message here</string>
    <string name="loading">Loading…</string>
    <string name="loading_dialog_tag">Loading Dialog</string>
    <string name="product_not_found">Product Not Found</string>
    <string name="pnf_dialog_msg">
        Our apologise that it seems like this product hasn\'t been added to our database yet,
        would you like to manually contribute the product information?</string>
    <string name="not_now">Not now</string>
    <string name="sure">Sure</string>
    <string name="contribute_new_product">Contribute a New Product</string>
    <string name="product_brand">Product Brand:</string>
    <string name="product_name">Product Name:</string>
    <string name="product_price">Product Original Price:</string>
    <string name="product_category">Product Category:</string>
    <string name="product_nutrition_info">Product Nutrition Information:</string>
    <string name="product_pic">Picture of the product:</string>
    <string name="retake_tvbtn"><u>retake</u></string>
    <string name="edit_tvbtn"><u>edit</u></string>
    <string name="close">Close</string>
    <string name="confirm">Confirm</string>
    <string name="edit">Edit</string>
    <string name="edit_category">Edit Product Category:</string>
    <string name="next">Next</string>
    <string name="capture">Capture</string>
    <string name="on_successful_product_contribution_msg">Successfully submitted! Thank you very much for your contribution! You have been awarded %1$d contribution points!</string>
    <string name="product_information">Product Information</string>
    <string name="username_label">Username:</string>
    <string name="firstname_label">Firstname:</string>
    <string name="lastname_label">Lastname:</string>
    <string name="email_address_label">Email Address:</string>
    <string name="password_label">Password:</string>
    <string name="username_default">/{username}/</string>
    <string name="firstname_default">/{firstname}/</string>
    <string name="lastname_default">/{lastname}/</string>
    <string name="email_address_default">/{email address}/</string>
    <string name="password_default">/{password}/</string>
    <string name="select_profile_image">Select a profile image</string>
    <string name="select_from_album">Select from photo album</string>
    <string name="take_a_photo">Take a photo</string>
    <string name="preview_profile_image">Preview Profile Image</string>
    <string name="confirm_user_image_hint">Are you sure to use this as your profile image?</string>
    <string name="delete_account">Delete My Account</string>
    <string name="dialog_delete_account_title">Are you sure you want to delete your account?</string>
    <string name="dialog_delete_account_msg">
        You will lose all the data associated with your account.\n\nWARNING: This cannot be undone.
    </string>
    <string name="cancel">Cancel</string>
    <string name="confirm_red"><font fgcolor='#A80825'>Confirm</font></string>
    <string name="category">Category:</string>
    <string name="name">Name:</string>
    <string name="brand">Brand:</string>
    <string name="price">Price:</string>
    <string name="nutri_info_with_units">Nutrition Information:\n(Per 100 g/mL/kJ)</string>
    <string name="nutri_info_hint">Click each nutrition for its degree, based on the similar products.</string>
    <string name="similar_products">Similar Products</string>
    <string name="sort_products">Sort Similar Products:</string>
    <string name="descending">High to Low</string>
    <string name="nutrition_degree_low">Low</string>
    <string name="nutrition_degree_normal">Normal</string>
    <string name="nutrition_degree_high">High</string>
    <string name="product_reviews">Product Reviews</string>
    <string name="write_a_review">Write A Review</string>
    <string name="total_num_of_reviews">%1$d&#160;reviews in total</string>
    <string name="review_successful_submit">Thank you very much for your review! You have been awarded %1$d contribution points!</string>
    <string name="farewell_user_on_delete">User account successfully deleted, all the best and hope to see you again!</string>
    <string name="camera">Camera</string>
    <string name="external_storage">Files and media</string>
    <string name="user_pimg_updated">Your profile image has been successfully updated!</string>
    <string name="privacy_policy"><u>Privacy Policy</u></string>
    <string name="terms_and_conditions"><u>Terms And Conditions</u></string>
    <string name="deleted_user">&#60;Deleted User&#62;</string>
    <string-array name="categories">
        <item>Soft Drinks</item>
        <item>Soft Drink Cans</item>
        <item>Energy Drinks</item>
        <item>Juice</item>
        <item>Coffee</item>
        <item>Milk</item>
        <item>Iced Tea</item>
        <item>Health Products</item>
        <item>Cereal</item>
        <item>Bread</item>
        <item>Cake</item>
        <item>Muesli Bars</item>
        <item>Granola &amp; Muesli</item>
        <item>Canned Fruit</item>
        <item>Biscuits</item>
        <item>Crispbread</item>
        <item>Gum &amp; Mints</item>
        <item>Chocolate</item>
        <item>Lollies</item>
        <item>Popcorn</item>
        <item>Chips</item>
        <item>Noodles</item>
        <item>Sauces</item>
        <item>Relishes &amp; Pickles</item>
        <item>Soup</item>
        <item>Cheese</item>
        <item>Butter</item>
        <item>Snacks</item>
    </string-array>
    <string name="facebook_app_id" translatable="false">487504102712984</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb487504102712984</string>
    <string name="facebook_client_token" translatable="false">ff1e8ddff27b8f12ed114806eb47abd5</string>
    <string name="enter_info_hint">Please enter the information here</string>
    <string name="product_review_et_hint">What do you think about this product?</string>
    <string name="content_description_start_icon">A start icon displayed</string>
    <string name="content_description_end_icon">An end icon displayed</string>
    <string name="close_btn_content_description">A close button</string>
</resources>