<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_slab"
        android:text="@string/write_a_review"
        android:textColor="?attr/colorPrimary"
        android:textSize="23sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"/>

    <RatingBar
        android:id="@+id/product_review_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:progressTint="@color/feedback_rating_star_color"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="18dp"/>

    <EditText
        android:id="@+id/review_desc_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:hint="@string/product_review_et_hint"
        android:inputType="textMultiLine"
        android:lines="6"
        android:maxLength="500"
        android:scrollHorizontally="false"
        android:layout_gravity="center_horizontal"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_marginTop="12dp"
        android:id="@+id/btns_layout"
        android:layout_width="@dimen/dialog_msg_max_width"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/close_btn"
            style="@style/Widget.Scannera.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginStart="20dp"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/submit_btn"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.Scannera.Button"
            android:id="@+id/submit_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/submit"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>