<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.fit3162.scannera_app.AboutUsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        app:elevation="0dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@android:color/transparent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/Widget.Scannera.Toolbar"
            android:theme="@style/Widget.Scannera.ToolbarTheme" />

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/activity_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_slab"
        android:text="@string/about_us"
        android:textColor="?attr/colorPrimary"
        android:textSize="@dimen/activity_title_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_bar" />

    <TextView
        android:id="@+id/about_us_description"
        style="@style/Widget.Scannera.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/general_btn_margin"
        android:layout_marginEnd="@dimen/general_btn_margin"
        android:gravity="center"
        android:maxWidth="350dp"
        android:text="@string/about_us_description"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/description_guideline" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/provide_feedback_btn"
        style="@style/Widget.Scannera.Button"
        android:layout_width="match_parent"
        android:layout_marginStart="@dimen/general_btn_margin"
        android:layout_marginEnd="@dimen/general_btn_margin"
        android:layout_marginBottom="24dp"
        android:gravity="center"
        android:text="@string/provide_feedback"
        app:icon="@drawable/ic_feedback"
        app:iconGravity="textStart"
        app:layout_constraintBottom_toTopOf="@id/statements_url"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/about_us_description"
        app:layout_constraintVertical_bias="0.8" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/description_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <LinearLayout
        android:id="@+id/statements_url"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="24dp">

    <TextView
        style="@style/Widget.Scannera.TextView"
        android:id="@+id/privacy_policy_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/privacy_policy"
        android:textSize="@dimen/small_text_size"
        android:layout_gravity="center"/>

    <TextView
        style="@style/Widget.Scannera.TextView"
        android:id="@+id/terms_and_conditions_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/terms_and_conditions"
        android:textSize="@dimen/small_text_size"
        android:layout_gravity="center"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>